<resources>

    <string name="app_name">Календарь праздников</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Календарь праздников</string>
    <string name="add_record">Добавить запись</string>
    <string name="delete_record">Удалить запись</string>
    <string name="title_activity_detail">Информация</string>
    <string name="menu_exit">Выход</string>
    <string name="menu_find">Найти праздник</string>
    <string name="menu_tomorrow">Завтра</string>
    <string name="menu_yesterday">Вчера</string>
    <string name="menu_today">Сегодня</string>
    <string name="menu_to_date">Выбрать дату</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="button_find">Найти</string>
    <string name="adMob">a150e51c3db4af1</string>
    <string name="title_activity_widget_config">Параметры виждета</string>
    <string name="title_4x1">Праздники (4x1)</string>
    <string name="title_4x2">Праздники (4x2)</string>
    
    <string name="chk_rus">Праздники России</string>
    <string name="chk_bel">Праздники Беларуси</string>
    <string name="chk_ukr">Праздники Украины</string>
    <string name="chk_wrld">Международные праздники</string>
    
    <string name="widget_options">Параметры виджета</string>
    
    <string name="settings_bg_color_dialog">Выберите цвет</string>
    <string name="settings_bg_color_confirm">Готово</string>
    <string name="settings_default_color_confirm">Отмена</string>
    
    <string name="bacground_color">Цвет фона</string>
    <string name="text_color">Цвет текста</string>
    <string name="clarity">Прозрачность фона</string>
    <string name="add_widget">Добавить виджет</string>
    

    <color name="white">#B7F0FF</color>
    <color name="black">#000000</color>
    <color name="blue_title">#4FCAFF</color>
    <color name="widget_back">#994FCAFF</color>

    

</resources>