<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/config_activity"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_gravity="center_vertical"
	android:orientation="vertical"
	android:background="#DD000000">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/widget_options" 
        android:gravity="center"
		android:textSize="16sp"
		android:textColor="@color/white"
        android:background="@drawable/flag_drawable" />
    
    <CheckBox
        android:id="@+id/chk_rus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_rus"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:checked="true" />
 
    <CheckBox
        android:id="@+id/chk_bel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_bel"
        android:textSize="20sp" 
        android:textColor="@color/white"
        android:checked="true"	/>
       
 
    <CheckBox
        android:id="@+id/chk_ukr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_ukr" 
        android:textSize="20sp"
        android:textColor="@color/white"
        android:checked="true" />
    
    <CheckBox
        android:id="@+id/chk_wrld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_wrld"
        android:textSize="20sp" 
        android:textColor="@color/white"
        android:checked="true"	/>
    
    <ListView
 		android:id="@+id/list_colors"
 		android:layout_width="fill_parent"
 		android:layout_height="30dp"
 		android:divider="@color/blue_title"
 		android:orientation="horizontal" >
	</ListView>
    
    <Button
        android:id="@+id/button_ok"
        android:layout_width="fill_parent"
        android:layout_height="36sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/add_widget" 
        android:textSize="20sp"
        android:textColor="@color/white"
                
        android:background="@drawable/button_style"
        android:onClick="startWidget"
	/>

</LinearLayout>
