<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
 	android:layout_height="fill_parent"	
 	android:orientation="vertical"
 	android:background="@color/black">
 	
    
 	
		<TextView
			android:id="@+id/act_main_title"
	 		android:layout_width="fill_parent"
	 		android:layout_height="wrap_content"
	 		android:gravity="center"
			android:text=""
		 	android:textSize="14sp"
		 	android:textColor="@color/white"
		 	android:background="@drawable/flag_drawable" >
		</TextView>
		
		<ListView
	 		android:id="@+id/lvData"
	 		android:layout_width="fill_parent"
	 		android:layout_height="0dp"
	 		android:layout_weight="1"
	 		android:divider="@color/blue_title"
	 		android:dividerHeight="2dp"
	 		android:background="@color/black" >
		</ListView>
		
		<!-- Сепаратор -->
		<View
		    android:layout_width="wrap_content"
		    android:background="@drawable/separator_drawable"
		    android:layout_height="3dp" />
		
		<!-- Кнопки навигации -->
		<LinearLayout 
		    android:layout_width="fill_parent"
		 	android:layout_height="90dp"	
		 	android:gravity="bottom"
		 	android:orientation="horizontal"
		 	android:background="@color/black" >
		 	
		 	
	 		
			<Button
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.30"
		        android:layout_gravity="center_vertical"
		        android:text="@string/menu_yesterday"
		        android:textColor="@color/white"
		        android:drawableTop="@drawable/menu_yesterday"
		        android:background="@color/black" 
		        android:onClick="getYesterday"/>
		    
		    <Button
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.30"
		        android:layout_gravity="center_vertical"
		        android:text="@string/menu_today"
		        android:textColor="@color/white"
		        android:drawableTop="@drawable/menu_today"
		        android:background="@color/black" 
		        android:onClick="getToday"/>
		        
			<Button
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.30"
		        android:layout_gravity="center_vertical"
		        android:text="@string/menu_tomorrow"
		        android:textColor="@color/white"
		        android:drawableTop="@drawable/menu_tomorrow"
		        android:background="@color/black" 
		        android:onClick="getTomorrow"/>
			
		</LinearLayout>
	
	
	
    <!-- Реклама -->
	<com.google.ads.AdView android:id="@+id/adView"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           ads:adSize="BANNER"
                           ads:adUnitId="@string/adMob" 
                           ads:loadAdOnCreate="true"/>

</LinearLayout>
